<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book_name" />

        <EditText
            android:id="@+id/book_name_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/enter_book_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/quantity_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="Enter Quantity"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/suppllier_name" />

        <EditText
            android:id="@+id/supplier_name_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/enter_supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="Phone No" />

        <EditText
            android:id="@+id/phone_no_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/enter_phone_no"
            android:inputType="phone" />
    </LinearLayout>


</LinearLayout>