<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_details"
        android:textColor="@color/orange_color"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:textSize="@dimen/twenty_two_sp"
        android:textStyle="bold|italic"
        tools:text="Wings of fire" />

    <TextView
        android:id="@+id/details_book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold|italic"
        tools:text="@string/eighty" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/four_dp"
        android:layout_marginTop="@dimen/four_dp"
        android:background="@color/color_Accent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/supplier_details"
        android:textColor="@color/orange_color"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:textSize="@dimen/twenty_two_sp"
        android:textStyle="bold|italic"
        tools:text="Vineet Prasad Verma" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_supplier_phone_no"
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six_dp"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold|italic"
            tools:text="8894934323" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="@dimen/fourty_dp"
            android:layout_height="@dimen/fourty_dp"
            android:background="@drawable/call_black"
            android:layout_marginLeft="@dimen/eight_dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/four_dp"
        android:layout_marginTop="@dimen/four_dp"
        android:background="@color/color_Accent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/quantity_tag"
        android:textColor="@color/orange_color"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/six_dp"
            android:backgroundTint="@color/color_Accent"
            android:text="-"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/details_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six_dp"
            android:paddingLeft="@dimen/four_dp"
            android:paddingRight="@dimen/four_dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty_two_sp"
            android:textStyle="bold"
            tools:text="50" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/six_dp"
            android:backgroundTint="@color/color_Accent"
            android:text="+"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/detail_enter_quantity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="Or Enter Quantity"
            android:textColor="@color/color_Accent"
            android:textColorHint="@color/color_Accent"
            android:textStyle="italic|bold"
            android:inputType="number"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>


</LinearLayout>